final tweaks for new verse actions

--- a/app/assets/stylesheets/_dynamic_menus.sass
+++ b/app/assets/stylesheets/_dynamic_menus.sass
@@ -415,13 +415,6 @@
   border-top: none
   padding: 10px 20px
 
-#menu_verse_actions #note-pane .title
-  float: left
-  margin-right: 25px
-
-#menu_verse_actions #note-pane .save
-  margin-top: 10px
-
 .dynamic_menu.version_select
   width: 415px
 
@@ -444,19 +437,23 @@
 #menu_verse_actions #share-pane .pane
   padding: 20px 20px 0
 
-#menu_verse_actions #share-pane .pane .share_action
+#menu_verse_actions #share-pane .share_message textarea
+  margin-bottom: 8px
+  line-height: 18px
+
+#menu_verse_actions #share-pane .share_action
   clear: both
   margin-top: 8px
 
-#menu_verse_actions #share-pane .pane .share_services
+#menu_verse_actions #share-pane .share_services
   overflow: hidden
   margin-top: 8px
 
-#menu_verse_actions #share-pane .pane .share_action
+#menu_verse_actions #share-pane .share_action
   float: none
   margin-bottom: 20px
 
-#menu_verse_actions #share-pane .pane .share_services span
+#menu_verse_actions #share-pane .share_services span
   display: block
   float: left
   margin-left: 5px
@@ -464,11 +461,11 @@
   border: 1px solid #e1e1e1
   padding: 4px 6px 0 1px
 
-#menu_verse_actions #share-pane .pane .share_services span:first-child
+#menu_verse_actions #share-pane .share_services span:first-child
   margin-left: 0
 
 #menu_verse_actions #link-pane .pane
-  padding-top: 20px
+  padding: 20px
 
 #menu_verse_actions #note-pane .pane
   padding: 20px
@@ -480,6 +477,23 @@
   width: 300px
   margin-bottom: 20px
 
-#menu_verse_actions #note-pane .pane #note_content-wysiwyg-iframe
-  width: 500px !important
-  height: 150px !important
+#menu_verse_actions #note-pane .title
+  float: left
+  margin-right: 25px
+
+#menu_verse_actions #note-pane .save
+  margin-top: 10px
+
+#menu_verse_actions #link-pane #copy_link_input
+  width: 400px
+
+#menu_verse_actions #link-pane #copy_link_container
+  position: absolute
+  left: 400px
+  top: 0px
+
+#menu_verse_actions #link-pane #copy_link
+  margin-top: 0px
+  width: 100px
+  height: 23px
+
