Styled the share character counts in reader verse action toolbar

--- a/app/assets/stylesheets/_dynamic_menus.sass
+++ b/app/assets/stylesheets/_dynamic_menus.sass
@@ -447,7 +447,7 @@
 
 #menu_verse_actions #share-pane .share_services
   overflow: hidden
-  margin-top: 8px
+  margin-top: 10px
 
 #menu_verse_actions #share-pane .share_action
   float: none
@@ -463,6 +463,18 @@
 
 #menu_verse_actions #share-pane .share_services span:first-child
   margin-left: 0
+
+#menu_verse_actions #share-pane .share_services span .character_count
+  background-color: #CDCDCD
+  border: 0
+  color: white
+  font-size: 12px
+  font-weight: bold
+  margin-top: 2px
+  padding: 1px 4px 0
+
+#menu_verse_actions #share-pane .share_services span .translation_missing
+  border: 0
 
 #menu_verse_actions #link-pane .pane
   padding: 20px
