Styled sign up buttons in reader verse toolbar

--- a/app/assets/stylesheets/_dynamic_menus.sass
+++ b/app/assets/stylesheets/_dynamic_menus.sass
@@ -509,3 +509,8 @@
   width: 100px
   height: 23px
 
+#menu_verse_actions #get-started-buttons
+  margin-bottom: 10px
+
+#menu_verse_actions #get-started-buttons .or
+  margin: 0 9px
