getting specs running again

--- a/app/assets/stylesheets/wysiwyg/jquery.wysiwyg.css
+++ b/app/assets/stylesheets/wysiwyg/jquery.wysiwyg.css
@@ -81,7 +81,7 @@ background-color:white; padding:0px; margin:0; display:block; width: 100%; }
 div.wysiwyg li { padding-top: 0px !important; margin-left: 0px !important; padding-left: 0px!important; list-style: disc !important}
 
 /* dialog */
-.wysiwyg-dialog { position:fixed; top:50px; left:50px; width:450px; height:300px; background:transparent; font:14px "Helvetic Neue", Helvetica,Arial,sans-serif; }
+.wysiwyg-dialog { margin: '10px';position:fixed; top:50px; left:50px; width:450px; height:300px; background:transparent; font:14px "Helvetic Neue", Helvetica,Arial,sans-serif; }
 .wysiwyg-dialog .wysiwyg-dialog-topbar { background:#333; border:1px #111 solid; color:white; padding:10px; position:relative; }
 .wysiwyg-dialog .wysiwyg-dialog-topbar .wysiwyg-dialog-close-wrapper .wysiwyg-dialog-close-button { color:white; text-decoration:none; display:block; padding:6px 10px; position:absolute; right:12px; top:50%; height:14px; margin-top:-12px; }
 .wysiwyg-dialog .wysiwyg-dialog-topbar .wysiwyg-dialog-close-wrapper a.wysiwyg-dialog-close-button:hover { background:#666; }
