final styling, for real

--- a/app/assets/stylesheets/_dynamic_menus.sass
+++ b/app/assets/stylesheets/_dynamic_menus.sass
@@ -509,6 +509,11 @@
   width: 100px
   height: 23px
 
+#menu_verse_actions #need-account h4
+  text-align: center
+  color: #666
+  margin-top: 25px
+
 #menu_verse_actions #get-started-buttons
   margin-bottom: 10px
 
