Highlight fixes, plan_start_path fix, header css fixes, tweak reading plan mode widget.

--- a/app/assets/stylesheets/_sidebar.sass
+++ b/app/assets/stylesheets/_sidebar.sass
@@ -58,6 +58,11 @@
 
 #sb-subscription
 
+  .widget-notice
+    .exit
+      display: block
+      float: right
+
   .widget li.content_target
     position: relative
 
