--- a/app/assets/stylesheets/_dynamic_menus.sass
+++ b/app/assets/stylesheets/_dynamic_menus.sass
@@ -18,6 +18,16 @@
   z-index: 2
   top: 120px
 
+  header
+    background:
+      color: #0C0C0C !important
+      image: none !important
+    border: none !important
+    text-shadow: none !important
+    box-shadow: none !important
+    -webkit-box-shadow: none !important
+    -moz-box-shadow: none !important
+
 .spinner_wrapper
   position: absolute
   width: 100%
@@ -59,6 +69,7 @@
 
 .dynamic_menu .scroll
   border-right: 0
+  border-left: 0
   height: 450px
   overflow-x: hidden
   overflow-y: scroll
