--- a/app/views/sidebars/plans/_show.html.haml
+++ b/app/views/sidebars/plans/_show.html.haml
@@ -9,7 +9,7 @@
     - else
       = link_to(t('plans.subscribe to plan'), user_subscriptions_path(current_user, plan_id: plan.to_param), id: "subscription-start", class: 'action_button_green', style: "margin-bottom: 10px", method: :post)
   - else
-    = link_to(t('plans.subscribe to plan'), sign_up_path(source: "plan", id: plan.id, redirect: plan_start_path(plan)), class: 'action_button_green', style: "margin-bottom: 10px")
+    = link_to(t('plans.subscribe to plan'), sign_up_path(source: "plan", id: plan.id, redirect: plan_path(plan)), class: 'action_button_green', style: "margin-bottom: 10px")
 .widget
   %header
     %span
