--- a/app/views/references/_reader.html.haml
+++ b/app/views/references/_reader.html.haml
@@ -11,7 +11,7 @@
 - verses        = presenter.respond_to?(:verses)        ? presenter.verses : nil # some of our presenters may not expose the verses (yet)
 - focus_verses  = presenter.focus? # for verses focus styling instead of select styling.
 - modal_verse   = presenter.respond_to?(:modal_verse)   ? presenter.modal_verse : nil
-
+- a_subscription_chapter = presenter.is_a?(Presenter::Subscription) && presenter.is_chapter?
 
 = render partial: "/references/reader_header", locals: {reference: reference, version:version, alt_version: alt_version, presenter: presenter}
 
@@ -29,7 +29,7 @@
          "data-setting-trans-notes" => client_settings.reader_trans_notes,
          "data-setting-cross-refs" => client_settings.reader_cross_refs,
          "data-setting-show-highlights" => client_settings.reader_highlights,
-         "class" => (focus_verses ? "mute" : nil)}
+         "class" => (focus_verses && (not a_subscription_chapter)) ? "mute" : nil}
   .wrap
     %div.nav_items
       - direction = 'rtl' if version.try(:rtl?)
@@ -62,54 +62,4 @@
         =link_to t('versions.learn more'), version.url || version_path(version), class: 'button'
 
 
-// Setup our Reader js object
-
-- content_for   :javascripts do
-  - fullscreen  = (client_settings.reader_full_screen && client_settings.reader_full_screen == 1) ? true : false;
-  - parallel    = (client_settings.reader_parallel_mode && client_settings.reader_parallel_mode == 1) ? true : false;
-  %script
-    :plain
-
-      jQuery(document).ready(function() {
-        reader = new Reader({
-          version: "#{reference[:version].to_s}",
-          abbrev: "#{version.try(:abbreviation).downcase}",
-          reference: "#{reference.to_param}",
-          book: "#{reference[:book].to_s.downcase}",
-          book_api: "#{reference[:book].sub(/[A-Z]+/) {|m| m.downcase}}",
-          book_human: "#{version.books[reference[:book]].human}",
-          chapter: "#{reference[:chapter].to_s}",
-          font: "#{client_settings.reader_font}",
-          size: "#{client_settings.reader_font_size}",
-          trans_notes: #{client_settings.reader_trans_notes},
-          cross_refs: #{client_settings.reader_cross_refs},
-          show_highlights: #{client_settings.reader_highlights},
-          full_screen: #{fullscreen},
-          parallel_mode: #{parallel}
-        });
-        reader.init();
-        var page = window.app.getPage();
-            page.setReader( reader );
-      });
-
-// Render all necessary menus
-- if reader_menus == true
-  = render_cell :book_selector, :display, {version: version}
-  = render_cell :version_selector, :display, {version: version, recent_versions: recent_versions, reference: reference, site: @site}
-  = render(partial:'/shared/modal_single_verse',locals: {modal_verse: modal_verse, reference: reference, version: version}) unless @verse_modals == false ||  modal_verse == nil
-  = render(partial: '/shared/menu_settings')
-  = render(partial: '/shared/menu_audio_player', locals: {reference: reference})
-
-// Dump a json representation of our @version into the markup for use by reader menus.
-// Would like to move this at some point to an API call if at all possible.
-- version_json = {abbreviation: version.abbreviation.downcase, id: version.to_param }
-- version_json[:books] = {}
-- version.books.each do |book_usfm, book_info|
-  - chapters = version.books[book_usfm].chapters.map {|c| {human: c.human, usfm: c.usfm.downcase, canon: c.canonical }}
-  - version_json[:books][book_usfm.downcase] = {human: book_info.human, chapters: chapters }
-
-/ Json representation of our version. Currently used for building our dynamic chapter grid menu.
-/ This will be cached along with the entire template
-%script
-  :plain
-    version_json = #{version_json.to_json.html_safe};
+= render partial: "/references/js", locals: {presenter: @presenter}
