--- a/app/views/sidebars/references/_show.html.haml
+++ b/app/views/sidebars/references/_show.html.haml
@@ -5,11 +5,12 @@
 - reference = presenter.reference
 
 // Bookmarks widget requires no local variables
-.widget.bookmarks.ajax_me{"data-ajax" => "/bible/widgets/bookmarks"}
-  %header
-    %span.header_icon_bookmark= t('recent bookmarks')
-  %ul
-    %li= t('bookmarks.loading')
+- if current_auth
+  .widget.bookmarks.ajax_me{"data-ajax" => "/bible/widgets/bookmarks"}
+    %header
+      %span.header_icon_bookmark= t('recent bookmarks')
+    %ul
+      %li= t('bookmarks.loading')
 
 // Notes widget
 = render_cell :notes_list_widget, :stub, title: t("notes.community notes"), reference: reference
