menus back to separate widescreen and mobile for now

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -72,6 +72,9 @@
   #yv_logo
     display: none !important
 
+  #reader_header
+    display: none !important
+
   article .nav_items,
   .search
     display: none
@@ -136,7 +139,7 @@
   .version_select th
     min-width: 6em
 
-    a 
+    a
       padding: 10px
   .version_select td
     width: 80%
