--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -194,7 +194,7 @@
 
   #sidebar
     background-image: none
-    background: #202020
+    background: #EEEDEB
     border: 0px
     width: 100%
     height: 100%
@@ -202,9 +202,57 @@
     position: absolute
     top: -46px
     z-index: 1005
+    margin: 0px
 
   #sidebar.open
     display: block !important
+
+  #sidebar .widget.subscription header,
+  #sidebar .widget_spacer
+    display: none !important
+
+  #sidebar #sb-subscription .widget_menu,
+  #sidebar #sb-subscription .widget li.content_target
+    border-radius: 0px
+
+  #sidebar #sb-subscription .widget li.content_target form
+    margin-top: 10px
+
+  #sidebar #sb-subscription .widget li.content_target a,
+  #sidebar #sb-subscription .widget li.content_target.active span
+    padding: 15px 20px 15px 15px
+    font-size: 15px
+
+  #sidebar .widget.devotional
+    margin-top: 30px
+
+  #sidebar .widget.devotional header
+    position: static !important
+    width: 100%
+    border-radius: 0px
+    background: #2C2B2B
+    color: white
+    text-shadow: none
+    padding: 8px 20px
+    font-size: 16px
+    border: 0px
+
+  #sidebar .widget-notice
+    border-radius: 0px
+    background: $blue
+    color: #fff
+    font-weight: bold
+    border: 0px
+    box-shadow: none
+    margin: 0px
+
+  #sidebar .widget-notice a
+    color: #202020
+    float: right
+    text-decoration: none
+
+  #sidebar .widget-notice a:hover
+    text-decoration: none
 
   // TODO: delete as many as possible, moving only
   // necessarry SASS into better organized folders/files
