--- a/app/views/subscriptions/show.html.haml
+++ b/app/views/subscriptions/show.html.haml
@@ -1,8 +1,10 @@
 - @title = @presenter.subscription_name
 
 - content_for :mobile_subscription_nav do
-  %a.subscription_btn{:href => 'javascript:void(0);'}
-    %span= t('plans.day number', day: @presenter.day)
+  %span.reading_plans_btn
+    %span.plan_day= t('plans.day number', day: @presenter.day)
+    %a.subscription_btn{:href => 'javascript:void(0);'}
+  %span.right_btn_slice
 
 - if @presenter.reference
   = render partial: "/references/reader", locals: {presenter: @presenter}
