Styled sign in/up/out links in nav area

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -254,6 +254,13 @@
   #sidebar .widget-notice a:hover
     text-decoration: none
 
+  .mobile nav + nav
+    margin-top: -20px
+  .mobile #nav_mobile_sign_in a,
+  .mobile #nav_mobile_sign_out a,
+  .mobile #nav_mobile_sign_up a
+    padding-left: 20px
+
   // TODO: delete as many as possible, moving only
   // necessarry SASS into better organized folders/files
   @import mobile/avatars
