--- a/app/views/shared/_nav_mobile.html.haml
+++ b/app/views/shared/_nav_mobile.html.haml
@@ -13,13 +13,16 @@
       %li#nav_mobile_notes{class: @nav == :notes ? "highlighted" : ""}
         %a.icon{:href => current_auth ? user_notes_path(current_auth.username) : notes_path}
           %span=t("notes title")
+      %li#nav_mobile_friends
+        %a.icon{:href => current_auth ? user_following_path(current_auth.username) : sign_up_path(source: "friends", redirect: "/friends")}
+          %span=t("friends")
       - if current_auth
-        %li#nav_mobile_friends
-          %a.icon{:href => current_auth ? user_following_path(current_auth.username) : sign_up_path(source: "friends", redirect: "/friends")}
-            %span=t("friends")
         %li#nav_mobile_profile
           %a.icon{:href => user_path(current_auth.username)}
             %span=t("Profile")
+      %li#nav_mobile_live
+        %a.icon{:href => "http://#{([:de, :es, :fr, :ko, :nl, :no, :pt, :ru, :zh_CN, :zh_TW].include?(I18n.locale) ? I18n.locale : :www).to_s.downcase.gsub("_", "-")}.a.youversion.com/live"}
+          %span=t("live")
       %li#nav_mobile_mobile
         %a.icon{:href => '/mobile'}
           %span=t("mobile apps")
