--- a/app/assets/stylesheets/mobile/_modal_window.sass
+++ b/app/assets/stylesheets/mobile/_modal_window.sass
@@ -199,6 +199,10 @@
 #share_tab_content .share_message
   float: right
   width: 300px
+
+.share_message textarea
+  height: 100px
+
 #share_tab_content .share_message span
   float: left
   margin-top: 5px
