--- a/app/views/references/_reader.html.haml
+++ b/app/views/references/_reader.html.haml
@@ -24,6 +24,7 @@
 
 - content_for :title do
   = link_to(reference.human, 'javascript:void(0);')
+  %span.right_btn_slice
 
 = render partial: "/references/reader_header", locals: {reference: reference, version:version, alt_version: alt_version, presenter: presenter}
 
