--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -256,10 +256,14 @@
 
   .mobile nav + nav
     margin-top: -20px
+
   .mobile #nav_mobile_sign_in a,
   .mobile #nav_mobile_sign_out a,
   .mobile #nav_mobile_sign_up a
     padding-left: 20px
+
+  #invalid_chapter button
+    display: none
 
   // TODO: delete as many as possible, moving only
   // necessarry SASS into better organized folders/files
