--- a/app/views/references/invalid_ref.html.haml
+++ b/app/views/references/invalid_ref.html.haml
@@ -10,8 +10,16 @@
 - content_for :additional_meta do
   %meta{name: "robots", content: "noindex"}
 
+- content_for :mobile_right_nav do
+  %a.version_btn{:href => 'javascript:void(0);'}
+    = version.abbreviation
+  %span.right_btn_slice
+
+- content_for :title do
+  = link_to(reference.human, 'javascript:void(0);')
+
 %article
-  %div{style:"text-align: center; margin-top:70px"}
+  %div#invalid_chapter{style:"text-align: center; margin-top:70px"}
     %h1= t("ref.invalid chapter title")
     %p= t("ref.invalid chapter text")
     %div.dynamic_menu_trigger.no_style{:href=> '#menu_book_chapter', style: "height: 0; margin-left:68px"}
