bdc home stylesheet only for home page

--- a/app/assets/stylesheets/bdc_home.sass
+++ b/app/assets/stylesheets/bdc_home.sass
@@ -362,7 +362,7 @@ p
 
 // ----------------------------------- Media queries -----------------------------------
 
-@media only screen and (max-width: 480px)
+@media only screen and (max-width: 990px)
 
   body
     background: transparent
@@ -379,6 +379,12 @@ p
     background: transparent
     padding: 0
     width: auto
+
+  header #slideToNav
+    display: none !important
+
+  header #yv_logo
+    display: block !important
 
   #container.no_sidebar
     width: auto
