--- a/app/assets/stylesheets/bdc_home.sass
+++ b/app/assets/stylesheets/bdc_home.sass
@@ -372,7 +372,7 @@ p
   #wrapper
     margin: 0
     padding: 0
-    width: auto
+    width: 100% !important
     background: transparent
 
   #header_outer
