--- a/app/views/pages/status.html.haml
+++ b/app/views/pages/status.html.haml
@@ -66,6 +66,6 @@
           %b UA String
           %p.mute= request.env["HTTP_USER_AGENT"]
           %b X_MOBILE_DEVICE String
-          %P.mute= request.env["X_MOBILE_DEVICE"] || (null)
+          %p.mute= request.env["X_MOBILE_DEVICE"] || (null)
 
 
