CSS clean up on RP authed list

--- a/app/assets/stylesheets/mobile/_main_reader.sass
+++ b/app/assets/stylesheets/mobile/_main_reader.sass
@@ -400,7 +400,7 @@ div.close_tab
   border-radius: 0px
 
 #main article .combo_button + .big_list
-  margin-top: 50px
+  margin-top: 50px !important
 
 .nav_items.audio-disabled
   width: 170px
