--- a/app/assets/stylesheets/mobile/_pages.sass
+++ b/app/assets/stylesheets/mobile/_pages.sass
@@ -229,18 +229,22 @@ a.cta span
 
   .progress_counter
     width: 100%
-    text-align: center
+    text-align: left
     position: relative
     height: auto
     line-height: auto
     top: -16px
 
   .progress_wrap
-    width: 54%
+    width: 95%
     height: 55px
     float: left
-    margin: 20px 7% 0
     padding: 0
+    background: none
+
+  .progress_bar_outer
+    left: 7px
+    width: 100%
 
   .progress_percent_complete
     display: none
