CSS changes for All Plans RP list page

--- a/app/assets/stylesheets/mobile/_main_reader.sass
+++ b/app/assets/stylesheets/mobile/_main_reader.sass
@@ -399,7 +399,8 @@ div.close_tab
 #main article .combo_button dt:first-child + dd
   border-radius: 0px
 
-#main article .combo_button + .big_list
+#main article .combo_button + .big_list,
+#main article .combo_button + .split_pane
   margin-top: 50px !important
 
 .nav_items.audio-disabled
