--- a/app/cells/notes_list_widget/stub.html.haml
+++ b/app/cells/notes_list_widget/stub.html.haml
@@ -1,4 +1,4 @@
-%div.widget.notes.ajax_me{"data-ajax" => "#{bible_path(@reference)}/notes"}
+%div.widget.notes.ajax_notes{"data-ajax" => "#{bible_path(@reference)}/notes"}
 
   %header
     %span.header_icon_note= @title
