--- a/app/views/sidebars/references/_show.html.haml
+++ b/app/views/sidebars/references/_show.html.haml
@@ -6,7 +6,7 @@
 
 // Bookmarks widget requires no local variables
 - if current_auth
-  .widget.bookmarks.ajax_me{"data-ajax" => "/bible/widgets/bookmarks"}
+  .widget.bookmarks.ajax_bookmarks{"data-ajax" => "/bible/widgets/bookmarks"}
     %header
       %span.header_icon_bookmark= t('recent bookmarks')
     %ul
