--- a/app/views/references/_js.html.haml
+++ b/app/views/references/_js.html.haml
@@ -44,7 +44,8 @@
 - if reader_menus == true
   = render_cell :book_selector, :display, {version: version}
   = render_cell :version_selector, :display, {version: version, recent_versions: recent_versions, reference: reference, site: @site}
-  = render(partial:'/shared/modal_single_verse',locals: {modal_verse: modal_verse, reference: reference, version: version}) unless @verse_modals == false ||  modal_verse == nil
+  - if modal_verse.present?
+    = render(partial:'/shared/modal_single_verse',locals: {modal_verse: modal_verse, reference: reference, version: version}) unless @verse_modals == false ||  modal_verse == nil
   = render(partial: '/shared/menu_settings')
   = render(partial: '/shared/menu_audio_player', locals: {reference: reference})
 
