--- a/app/views/references/_reader_header.html.haml
+++ b/app/views/references/_reader_header.html.haml
@@ -5,9 +5,9 @@
 
 .mobile
   %div.verse_toolbar
-    %nav
-      %a.submenu_btn.bookmark_btn{href: 'javascript:void(0);', "data-action" => new_bookmark_path, "data-method" => 'GET'}
+    %nav{class: ('authed' if current_auth)}
       %a.submenu_btn.highlight_btn{href: 'javascript:void(0);'}
+      %a.submenu_btn.bookmark_btn{href: 'javascript:void(0);', "data-action" => new_bookmark_path, "data-method" => 'GET'}
       %a.submenu_btn.note_btn{href: 'javascript:void(0);', "data-action" => new_note_path, "data-method" => 'GET'}
       %a.submenu_btn.share_btn{href: 'javascript:void(0);', "data-action" => new_share_path, "data-method" => 'GET'}
 
