--- a/app/assets/stylesheets/mobile/_donate.sass
+++ b/app/assets/stylesheets/mobile/_donate.sass
@@ -1,26 +1,16 @@
 // Note: Styles for the "Donate Now" button are combined
 // with the sidebar button styles, in _sidebar.sass
 
-#donate_now_wrap
-  margin-bottom: 15px
-  text-align: right
 
-  .intl
-    text-align: center
+#main article.donate
+  padding-bottom: 0
+  padding-top: 16px
+  background: none
+  h1
+    line-height: 1em
+    float: none !important
+    width: auto
     display: block
-    font-weight: bold
-
-    &:link
-      text-decoration: none
-    &:hover
-      text-decoration: underline
-
-#main .donate
-  article
-    padding-bottom: 0
-    padding-top: 16px
-    h1
-      line-height: 1em
 
   .callout
     background: none
@@ -34,6 +24,34 @@
       background-image: none
       padding: 0
 
+#main article.donate
+  #donate_now_wrap
+    margin-bottom: 15px
+    text-align: right
+    float: none
+    width: auto
+
+    .intl
+      text-align: center
+      display: block
+      font-weight: bold
+
+      &:link
+        text-decoration: none
+      &:hover
+        text-decoration: underline
+
+#main article.donate
+  .float_left
+    float: none !important
+
+  div
+    padding-left: 0 !important
+
+  input[name="tr[city]"], input[name="tr[email]"], select[name="tr[state]"]
+    margin-bottom: 10px
+
+#main article.donate
   .emphasis + label,
   input + label,
   select + label
